[tool.poetry]
name = "phabricator-to-gitlab"
version = "0.1.0"
description = "tools for migrating from phabricator to gitlab"
authors = ["Daniel Eades <danieleades@hotmail.com>"]
readme = "README.md"
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
]


[tool.poetry.dependencies]
python = "^3.8"
phabricator = "^0.9.1"
python-gitlab = "^3.13.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
show_error_codes = true
files = "src,tests"
no_implicit_reexport = true


[tool.ruff]
target-version = "py38"
select = [
    "A00",  # flake8-builtins
    "ARG",  # flake8-unused-arguments
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "C901", # function cognitive complexity
    "E",    # flake8 built-ins
    "EM",   # flake8-errmsg
    "ERA",  # flake8-eradicate
    "F",    # flake8 built-ins
    "FBT",  # boolean trap
    "I001", # isort
    "ISC",  # implicit-str-concat
    "N8",   # pep8-naming
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "PLC",  # pylint
    "PLE",  # pylint
    "PLR",  # pylint
    "PLW",  # pylint
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "RUF",  # Ruff-specific lints
    "S",    # flake8-bandit
    "UP",   # pyupgrade
    "W",    # flake8 built-ins
]
